2014-03-14  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (w_fopen, w_popen, w_freopen, w_remove, w_rename): We
	have similar functions in the MSVCRT library used by MinGW,
	so if _WIN32 is defined, our functions now just wrap those.

2014-03-14  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (run): Fix MinGW build failures. The run function doesn't
	work right with arguments, though: the win command line is broken.

2014-03-14  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Make seed argument optional in make-random-state.

	* rand.c (make_random_state): Do argument defaulting on seed.
	Also, mix getpid() into the seed.
	(random_fixnum): Bugfix: do proper defaulting on optional
	agument, rather than relying on nil.
	(random): Fix 2014-02-05 regression. This was totally broken,
	ignoring the random state passed in and using the global
	random state. This function must only use the state passed in;
	there is no defaulting to the global random state.

	* txr.1: Documenting that seed is optional in make-random-state.
	Describing what guarantees can be expected with regard to
	calls made close together temporally.

2014-03-13  Kaz Kylheku  <kaz@kylheku.com>

	Implementing @(if)/@(elif)/@(else) in the pattern language.
	Input side for now; output later.

	* parser.y (if_clause, elif_clauses_opt, else_clause_opt): New nonterminals.
	(IF, ELIF, ELSE): New tokens.
	(yybadtoken): Handle IF, ELIF, ELSE.

	* parser.l: Recognize and return new tokens IF, ELIF and ELSE.

	* txr.1: Documented.

	* genvim.txr: Updated with if, elsif and else directive keywords.

	* txr.vim: Regenerated

2014-03-13  Kaz Kylheku  <kaz@kylheku.com>

	On platforms with sigaltstack, TXR programs can now catch the
	segmentation fault that occurs when running out of stack space,
	and escape by throwing an exception.

	Also, bugfix: save and restore the gc enable/disable state.  Without
	this, if we are ever running cod in a gc disabled state and it jumps
	out, gc stays disabled.
