@@ -1,5 +1,14 @@
 2014-03-14  Kaz Kylheku  <kaz@kylheku.com>
 
+	* parser.l (regex_parse, lisp_parse): Fix neglected handling of
+	optional arguments. This problem can cause the symbol : to be
+	planted as the std_error stream, resulting in an error loop
+	that blows the stack.
+
+	* regex.c (regex_compile): Likewise.
+
+2014-03-14  Kaz Kylheku  <kaz@kylheku.com>
+
 	* utf8.c (w_fopen, w_popen, w_freopen, w_remove, w_rename): We
 	have similar functions in the MSVCRT library used by MinGW,
 	so if _WIN32 is defined, our functions now just wrap those.
